# robotx_communication

./: dependency.repos
mock_server/: CMakeLists.txt  package.xml
mock_server/src/: mock_server.c
robotx_communication/: CMakeLists.txt  package.xml
robotx_communication/include/robotx_communication/: subscriber.hpp  technical_director_network_bridge_component.hpp  util.hpp
robotx_communication/src/: mock_server.c  technical_director_network_bridge_component.cpp  technical_director_network_bridge_node.cpp  util.cpp
robotx_communication/test/: test.cpp
robotx_msgs/: CMakeLists.txt  package.xml
robotx_msgs/msg/: AutonomousMaritimeSystemStatus.msg  UnmannedAerialVehicleStatus.msg
